# spin-example

./: spin.toml
api-component/: Cargo.toml
api-component/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs  todo.rs
models/: Cargo.toml
models/src/: lib.rs
redirect-component/: Cargo.toml
redirect-component/src/: lib.rs
