[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.1.1", features = ["v4"]}
getrandom = { version = "0.2", features = ["js"] }